--- a/scss/components/_contactBlock.scss
+++ b/scss/components/_contactBlock.scss
@@ -35,12 +35,20 @@
     margin: 50px auto 0 auto;
     @include flex($justify: space-around);
     transition: all 200ms linear;
+    @media screen and #{$mobile}{
+      @include flex($direction: column, $align-items: center);
+      margin: 0 auto;
+    }
     a {
       img {
         @include size(100px);
         margin: 2%;
         transition: all 200ms linear;
         opacity: 0.8;
+        @media screen and #{$mobile}{
+          @include size(60px);
+          margin: 1%;
+        }
         &:hover {
           opacity: 1;
           transition: all 200ms linear;
